@@ -11,6 +11,7 @@ class Net::SSLeay::X509 : pointer {
   use Net::SSLeay::ASN1_OBJECT;
   use Net::SSLeay::X509_EXTENSION;
   use Net::SSLeay::EVP_PKEY;
+  use Net::SSLeay::ASN1_INTEGER;
   
   use Fn;
   
@@ -31,8 +32,6 @@ class Net::SSLeay::X509 : pointer {
   
   native method get_subject_name : Net::SSLeay::X509_NAME ();
   
-  native method digest : int ($type : Net::SSLeay::EVP_MD, $md : mutable string, $len_ref : int*);
-  
   method digest_return_string : string ($type : Net::SSLeay::EVP_MD) {
     
     my $md = (mutable string)new_string_len SSL->EVP_MAX_MD_SIZE;
@@ -44,6 +43,12 @@ class Net::SSLeay::X509 : pointer {
     
     return $md;
   }
+  
+  native method dup : Net::SSLeay::X509 ();
+  
+  native method check_issued : int ($subject : Net::SSLeay::X509);
+  
+  native method get_pubkey : Net::SSLeay::EVP_PKEY ();
   
   native method pubkey_digest : int ($type : Net::SSLeay::EVP_MD, $md : mutable string, $len_ref : int*);
   
@@ -59,20 +64,18 @@ class Net::SSLeay::X509 : pointer {
     return $md;
   }
   
-  native method dup : Net::SSLeay::X509 ();
-  
-  native method check_issued : int ($subject : Net::SSLeay::X509);
-  
-  native method get_ocsp_uri : string ();
-  
   native method get_ext_by_NID : int ($nid : int, $lastpos : int);
   
   native method get_ext_count : int ();
   
   native method get_ext : Net::SSLeay::X509_EXTENSION ($loc : int);
   
-  native method DESTROY : void ();
+  native method get_ocsp_uri : string ();
   
-  native method get_pubkey : Net::SSLeay::EVP_PKEY ();
+  native method digest : int ($type : Net::SSLeay::EVP_MD, $md : mutable string, $len_ref : int*);
+  
+  native method get_serialNumber : Net::SSLeay::ASN1_INTEGER ();
+
+  native method DESTROY : void ();
   
 }
