@@ -4,6 +4,7 @@
   [New Features]
     * Add Net::SSLeay::XX509#new method.
     * Add Net::SSLeay::XX509#get_pubkey method.
+    * Add Net::SSLeay::XX509#get_serialNumber method.
   [Incompatibe Changes]
     * Net::SSLeay::XX509#get_issuer_name method returns a copied value.
     * Net::SSLeay::XX509#get_subject_name method returns a copied value.
